feat(benchmark): add benchmark functionality to evaluate model performance on MNIST dataset feat(lib): create utility functions for model management and MNIST data handling feat(train): implement training script for model training on MNIST dataset refactor(main): remove main.ts and restructure code into separate modules for better organization chore(package): update scripts in package.json to reflect new entry points for training and benchmarking

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "train": "tsx main.ts",
+    "train": "tsx train.ts",
+    "benchmark": "tsx benchmark.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
