feat(benchmark.ts, train.ts): add support for activation functions in training and benchmarking processes to enhance model flexibility feat(const.ts): create a constants file for default model configurations to centralize model settings refactor(lib/model/model.utils.ts): update model creation functions to accept activation functions for better customization fix(lib/ml-functions/ml-functions.utils.ts): modify forward and backward functions to utilize specified activation functions for improved accuracy chore(package.json): add TypeScript configuration and update scripts for better development experience chore(tsconfig.json): add TypeScript configuration file to enforce strict type checking and module resolution style(types.ts): define ActivationFunction type for better clarity and maintainability in model options

--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "ml-3blue-1brown-ts",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "train": "tsx train.ts",
     "benchmark": "tsx benchmark.ts",
+    "ts": "tsc --noEmit --diagnostics",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,11 +15,10 @@
   "license": "ISC",
   "packageManager": "pnpm@10.6.3",
   "dependencies": {
-    "@types/node": "^24.10.0",
-    "sharp": "^0.34.5",
-    "tsc": "^2.0.4"
   },
   "devDependencies": {
+    "@types/node": "^24.10.0",
+    "typescript": "^5.9.3",
     "tsx": "^4.20.6"
   }
 }
